--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-icons": "^4.3.1",
     "react-multi-carousel": "^2.6.5",
     "react-responsive-carousel": "^3.2.22",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.0",
     "react-scroll": "^1.8.4",
     "styled-components": "^5.3.3",
