--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
@@ -19,6 +21,7 @@
     "react-scripts": "5.0.0",
     "react-scroll": "^1.8.4",
     "react-select": "^5.2.1",
+    "sass": "^1.49.0",
     "styled-components": "^5.3.3",
     "web-vitals": "^2.1.2"
   },
