--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^0.26.0",
     "bootstrap": "^5.1.3",
     "date-fns": "^2.28.0",
+    "firebase": "^9.8.3",
     "pure-react-carousel": "^1.27.8",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.4",
