--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "misfrontend",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "16.15.1",
+    "npm": "8.11.0"
+  },
   "dependencies": {
     "@date-io/date-fns": "^2.13.1",
     "@emotion/styled": "^11.8.1",
